--- a/index.html
+++ b/index.html
@@ -15,21 +15,27 @@
         <div class="product">
             <img src="images/chocolate1.jpg" alt="Фігурки">
             <h2>Новорічні фігурки</h2>
-            <p>Опис шоколадного цукерок 1. Смачний та солодкий.</p>
-	    <p class="price">15 грн</p> <!-- Додати елемент з класом 'price' для ціни -->
-</div>
+            <p class="price">15 грн</p>
+            <p class="product-description">Шокола́д — клас продуктів харчування, переважно кондитерських виробів, що виготовляються з використанням плодів какао.
+
+За ДСТУ 2633—2007:
+
+Шоколад — цукровий кондитерський виріб із шоколадної маси[1].
+Шоколадна маса — тонкоподрібнена кондитерська маса, отримана змішуванням какао тертого з какао олією, цукром та іншими компонентами, які використовуються для виробництва шоколадних виробів[1].
+Какао, що походить з тропічних районів Південної Америки, культивувалося в Месоамериці починаючи щонайменш з 12 століття до н.е., до того часу відносяться найстаріші відомості. Більшість народів Месоамерики, таких як мая та ацтеки, виготовляли шоколадні напої, зокрема «шоколатль» (науатль xocolātl — «гірка вода»).</p>
+        </div>
         <div class="product">
             <img src="images/chocolate2.jpg" alt="Шоколадний Цукерок 2">
             <h2>Шоколадний Цукерок 2</h2>
-            <p>Опис шоколадного цукерок 2. Розкішний і ароматний.</p>
-	    <p class="price">400 грн</p> <!-- Додати елемент з класом 'price' для ціни -->
+            <p class="price">400 грн</p>
+            <p class="product-description">Опис шоколадного цукерок 2. Розкішний і ароматний.</p>
         </div>
-	<div class="product">
+        <div class="product">
             <img src="images/chocolate3.jpg" alt="Фігурки">
             <h2>Новорічні фігурки</h2>
-            <p>Опис шоколадного цукерок 1. Смачний та солодкий.</p>
-	    <p class="price">15 грн</p> <!-- Додати елемент з класом 'price' для ціни -->
-	</div>
+            <p class="price">15 грн</p>
+            <p class="product-description">Опис шоколадного цукерок 3. Зачаровуюча солодкість.</p>
+        </div>
         <!-- Додати більше продуктів тут -->
     </section>
 
