--- a/index.html
+++ b/index.html
@@ -9,34 +9,42 @@
 <body>
     <header>
         <h1>Ласкаво просимо до нашої Шоколадної Крамниці</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Головна</a></li>
+                <li><a href="about.html">Про нас</a></li>
+            </ul>
+        </nav>
     </header>
 
     <section class="products">
         <div class="product">
-            <img src="images/chocolate1.jpg" alt="Фігурки">
+            <div class="product-images">
+                <img class="main-img" src="images/chocolate1.jpg" alt="Товар 1">
+                <img class="alt-img" src="images/chocolate1_alt.jpg" alt="Товар 1 Alternative">
+            </div>
             <h2>Новорічні фігурки</h2>
             <p class="price">15 грн</p>
-            <p class="product-description">Шокола́д — клас продуктів харчування, переважно кондитерських виробів, що виготовляються з використанням плодів какао.
-
-За ДСТУ 2633—2007:
-
-Шоколад — цукровий кондитерський виріб із шоколадної маси[1].
-Шоколадна маса — тонкоподрібнена кондитерська маса, отримана змішуванням какао тертого з какао олією, цукром та іншими компонентами, які використовуються для виробництва шоколадних виробів[1].
-Какао, що походить з тропічних районів Південної Америки, культивувалося в Месоамериці починаючи щонайменш з 12 століття до н.е., до того часу відносяться найстаріші відомості. Більшість народів Месоамерики, таких як мая та ацтеки, виготовляли шоколадні напої, зокрема «шоколатль» (науатль xocolātl — «гірка вода»).</p>
+            <p class="product-description">Шокола́д — клас продуктів харчування, переважно кондитерських виробів, що виготовляються з використанням плодів какао...</p>
         </div>
         <div class="product">
-            <img src="images/chocolate2.jpg" alt="Шоколадний Цукерок 2">
+            <div class="product-images">
+                <img class="main-img" src="images/chocolate2.jpg" alt="Товар 2">
+                <img class="alt-img" src="images/chocolate2_alt.jpg" alt="Товар 2 Alternative">
+            </div>
             <h2>Шоколадний Цукерок 2</h2>
             <p class="price">400 грн</p>
-            <p class="product-description">Опис шоколадного цукерок 2. Розкішний і ароматний.</p>
+            <p class="product-description">Опис шоколадног апавпвап пвап вапвапва папвап пва  папвпва ап пва п вап вап ап вапвапвап впапап ва пвп вапіпі ррпр ьоьр б рблб бо цукерок 2. Розкішний і ароматний.</p>
         </div>
         <div class="product">
-            <img src="images/chocolate3.jpg" alt="Фігурки">
+            <div class="product-images">
+                <img class="main-img" src="images/chocolate3.jpg" alt="Товар 3">
+                <img class="alt-img" src="images/chocolate3_alt.jpg" alt="Товар 3 Alternative">
+            </div>
             <h2>Новорічні фігурки</h2>
             <p class="price">15 грн</p>
             <p class="product-description">Опис шоколадного цукерок 3. Зачаровуюча солодкість.</p>
         </div>
-        <!-- Додати більше продуктів тут -->
     </section>
 
     <footer>
