--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="product">
             <div class="product-images">
                 <img class="main-img" src="images/chocolate1.jpg" alt="Товар 1">
-                <img class="alt-img" src="images/chocolate1_alt.jpg" alt="Товар 1 Alternative">
+                '<img class="alt-img" src="images/chocolate1_alt.jpg" alt="Товар 1 Alternative">'
             </div>
             <h2>Новорічні фігурки</h2>
             <p class="price">15 грн</p>
